update: add media queries for box sizes and image sizes and positions    - add different images for each project depending on how large the      screen size is    - position the images according to how large the boxes get to keep the images centered

--- a/index.html
+++ b/index.html
@@ -64,15 +64,41 @@
           >
             <span class="above-text">Figma</span>
             <div class="box-title">Redesign of GIANT's App</div>
-            <img src="images/giant.png" alt="Giant App" />
+            <picture>
+              <source
+                media="(min-width: 1280px)"
+                srcset="./images/giant-1280.png"
+              />
+              <source
+                media="(min-width: 760px)"
+                srcset="./images/giant-760.png"
+              />
+              <source />
+              <img src="./images/giant.webp" alt="Giant App" />
+            </picture>
           </a>
           <a href="blueboard.html" class="link-box">
             <span class="above-text">Fly.io, Node.js, PostgreSQL</span>
             <div class="box-title">Blueboard</div>
-            <img
-              src="images/blueboard-login.webp"
-              alt="Login Page for Blueboard"
-            />
+            <picture>
+              <source
+                media="(min-width: 1280px)"
+                srcset="./images/blueboard-1280.png"
+              />
+              <source
+                media="(min-width: 1024px)"
+                srcset="./images/blueboard-1024.png"
+              />
+              <source
+                media="(min-width: 760px)"
+                srcset="./images/blueboard-760.png"
+              />
+              <source />
+              <img
+                src="./images/blueboard-login.webp"
+                alt="Blueboard Login Screen"
+              />
+            </picture>
           </a>
           <a
             href="https://www.figma.com/design/odTDbvIB13dxQiV7OsLK2Y/SAE?node-id=0-1&t=DQmo6AsRvrwDJrNN-1"
@@ -82,10 +108,21 @@
             <div class="box-title">
               Redesign of Drexel Electric Racing's Website (WIP)
             </div>
-            <img
-              src="images/sae-home.webp"
-              alt="Home page for Drexel Electric Racing"
-            />
+            <picture>
+              <source
+                media="(min-width: 1024px)"
+                srcset="./images/sae-home-1024.png"
+              />
+              <source
+                media="(min-width: 690px)"
+                srcset="./images/sae-home-690.png"
+              />
+              <source />
+              <img
+                src="./images/sae-home.webp"
+                alt="Home page for Drexel Electric Racing"
+              />
+            </picture>
           </a>
           <a
             href="https://www.cs.drexel.edu/~slb522/CS164/reindeer.html"
@@ -96,10 +133,21 @@
               >A Project From My First Computer Science Class</span
             >
             <div class="box-title">Animal Crossing State Machine</div>
-            <img
-              src="images/animal-crossing.webp"
-              alt="Animal Crossing Project Image"
-            />
+            <picture>
+              <source
+                media="(min-width: 1024px)"
+                srcset="./images/animal-crossing-1024.png"
+              />
+              <source
+                media="(min-width: 690px)"
+                srcset="./images/animal-crossing-690.png"
+              />
+              <source />
+              <img
+                src="./images/animal-crossing.webp"
+                alt="Animal Crossing Project Image"
+              />
+            </picture>
           </a>
         </div>
       </div>
