replace: replace cover images with text already on them    - replace the webp versions of the cover images with png versions      that has text apart of the image instead of adding it on top    - adding the text on top of the webp image interferred with the      hamburger style menu and was on top of the menu instead of      underneath    - remove old styling for text in photos.css since it is not      needed anymore

--- a/photos.html
+++ b/photos.html
@@ -54,26 +54,23 @@
       <div class="photo-categories">
         <a href="places.html" class="photo-card">
           <img
-            src="photos/coverPhotos/places.webp"
+            src="photos/coverPhotos/places.png"
             alt="cover image for photo gallery of places"
           />
-          <div class="photo-title">Places</div>
         </a>
         <a href="portraits.html" class="photo-card">
           <img
-            src="photos/coverPhotos/portraits.webp"
+            src="photos/coverPhotos/portraits.png"
             alt="cover image for photo gallery of portraits"
             loading="lazy"
           />
-          <div class="photo-title">Portraits</div>
         </a>
         <a href="sae.html" class="photo-card">
           <img
-            src="photos/coverPhotos/sae.webp"
+            src="photos/coverPhotos/fsae.png"
             alt="cover image for photo gallery of Drexel Electric Racing"
             loading="lazy"
           />
-          <div class="photo-title">FSAE</div>
         </a>
       </div>
     </main>
