update: address error report issues    - add descriptive text for footer links for all html pages    - add styling to the descriptive text so that it is not      visible    - change '&' to '&amp' in resume.html    - removed px units to 0 values in projects.css    - relocated selector 'p a:hover' to address error report issue

--- a/photos.html
+++ b/photos.html
@@ -78,12 +78,21 @@
       <h1>Contact</h1>
       <a href="https://github.com/sophiabartolacci" target="_blank">
         <i class="bx bxl-github"></i>
+        <span class="footer-hidden-text"
+          >Sophia Bartolacci's GitHub Profile</span
+        >
       </a>
       <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank">
         <i class="bx bxl-linkedin-square"></i>
+        <span class="footer-hidden-text"
+          >Sophia Bartolacci's LinkedIn Profile</span
+        >
       </a>
       <a href="mailto:slb522@drexel.edu">
         <i class="bx bxs-envelope"></i>
+        <span class="footer-hidden-text"
+          >Sophia Bartolacci's Email Address</span
+        >
       </a>
     </footer>
   </body>
