--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,7 @@
             <li>- Wordpress</li>
             <li>- Microsoft Office Suite</li>
           </ul>
-          <h5>Awards & Honors</h5>
+          <h5>Awards &amp Honors</h5>
           <ul>
             <li>- Dean's List</li>
           </ul>
@@ -187,12 +187,21 @@
       <h1>Contact</h1>
       <a href="https://github.com/sophiabartolacci" target="_blank">
         <i class="bx bxl-github"></i>
+        <span class="footer-hidden-text"
+          >Sophia Bartolacci's GitHub Profile</span
+        >
       </a>
       <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank">
         <i class="bx bxl-linkedin-square"></i>
+        <span class="footer-hidden-text"
+          >Sophia Bartolacci's LinkedIn Profile</span
+        >
       </a>
       <a href="mailto:slb522@drexel.edu">
         <i class="bx bxs-envelope"></i>
+        <span class="footer-hidden-text"
+          >Sophia Bartolacci's Email Address</span
+        >
       </a>
     </footer>
   </body>
