--- a/portraits.html
+++ b/portraits.html
@@ -45,6 +45,12 @@
           <li><a href="index.html">Projects</a></li>
           <li><a href="photos.html">Photography</a></li>
           <li><a href="resume.html">Resume</a></li>
+          <li>
+            <label class="theme-switch">
+              <input type="checkbox" id="theme-toggle" />
+              <span class="slider"></span>
+            </label>
+          </li>
         </ul>
       </nav>
     </header>
@@ -118,6 +124,12 @@
           >Sophia Bartolacci's GitHub Profile</span
         >
       </a>
+      <a href="https://www.figma.com/@0f6bc5a7_6271_4" target="_blank">
+        <i class="bx bxl-figma"></i>
+        <span class="footer-hidden-text"
+          >Sophia Bartolacci's Figma Profile</span
+        >
+      </a>
       <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank">
         <i class="bx bxl-linkedin-square"></i>
         <span class="footer-hidden-text"
@@ -131,5 +143,6 @@
         >
       </a>
     </footer>
+    <script src="scripts/dark-mode.js"></script>
   </body>
 </html>
